--- a/ftAux.html
+++ b/ftAux.html
@@ -233,12 +233,8 @@
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo N°5</b></h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
-                                <p>
-                                    You are permitted to use this Zay CSS template for your commercial websites. 
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
-                                </p>
+                                <h1 class="h1 text-success"><b>Objetivo Específico </b>N°5 </h1>
+                                <h3><a class="h2 text-success" rel="sponsored" href="https://mexico.unir.net/ingenieria/noticias/ingenieria-de-software-que-es-objetivos/" target="_blank">https://mexico.unir.net/ingenieria/noticias/ingenieria-de-software-que-es-objetivos/</a></h3>
                             </div>
                         </div>
                     </div>
