--- a/ftBase.html
+++ b/ftBase.html
@@ -225,16 +225,25 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/FT_5.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
-                            <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo N°5</b></h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
-                                <p>
-                                    You are permitted to use this Zay CSS template for your commercial websites. 
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
-                                </p>
+                            <div class="text-align-left align-self-center">
+                                <h1 class="h1 text-success"><b>Objetivo Específico </b>N°5 </h1>
+                                <ul style="list-style: none; padding-left: 0;">
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 20px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3 class="h2">Banks, J., Carson, J. S., Nelson, B. L., & Nicol, D. M. (2005). Discrete-Event System Simulation.</h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                      <span style="width: 15px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                      <h3 class="h2">Pressman, R. S. (2010). Ingeniería del software un enfoque practico</h3>
+                                    </li>
+                                    <li style="display: flex; align-items: center; margin-bottom: 10px;">
+                                        <span style="width: 10px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
+                                        <h3 class="h2">Sommerville, I. (2016). Ingeniería de Software</h3>
+                                      </li>
+                                  </ul>
                             </div>
                         </div>
                     </div>
