--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img2/" alt="">
+                            <img class="img-fluid" src="./assets/img2/OBJ_3.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo Especifico </b> N°3</h1>
+                                <h1 class="h1 text-success"><b>Objetivo Específico </b> N°3</h1>
                                 <h3 class="h2">Desarrollar un sistema de puntería basado en láser con visión artificial para 
                                     identificar el lugar de impacto en el blanco del polígono de tiro y registrar los datos 
                                     obtenidos en la práctica para su evaluación. </h3>
@@ -207,11 +207,11 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/OBJ_4.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo Especifico </b> N°4</h1>
+                                <h1 class="h1 text-success"><b>Objetivo Específico </b> N°4</h1>
                                 <h3 class="h2">Desarrollar un sistema de reconocimiento de posiciones del cuerpo humano, al 
                                     momento de realizar la práctica de tiro por los estudiantes y registrar datos de las 
                                     posturas en la evaluación. </h3>
@@ -224,11 +224,11 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
+                            <img class="img-fluid" src="./assets/img2/OBJ_5.png" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-success"><b>Objetivo Especifico </b> N°5</h1>
+                                <h1 class="h1 text-success"><b>Objetivo Específico </b> N°5</h1>
                                 <h3 class="h2">Integrar en una plataforma de evaluación y registro los subsistemas de puntería, 
                                     reconocimiento de posiciones del tirador, para el seguimiento del progreso de los 
                                     estudiantes de la EMI-UALP. </h3>
