--- a/trabajoGrado.html
+++ b/trabajoGrado.html
@@ -62,7 +62,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Objetivos</a>
                         </li>
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="acciones.html">Acciones</a>
                         </li>
                         </li>
@@ -104,7 +104,7 @@
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left align-self-center">
-                              <h1 class="h1 text-success"><b>Objetivos Especificos </b>Todos</h1>
+                              <h1 class="h1 text-success"><b>Objetivos Específicos </b>Todos</h1>
                               <ul style="list-style: none; padding-left: 0;">
                                 <li style="display: flex; align-items: center; margin-bottom: 10px;">
                                   <span style="width: 50px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
