sixth commit refactor

--- a/acciones.html
+++ b/acciones.html
@@ -19,7 +19,8 @@
 
     <style>
         .carousel-item {
-            height: calc(100vh - 150px);
+            /* height: calc(100vh - 150px); */
+            height: 100%;
         }
         .nav-item.active a.nav-link {
             color: #28a745 !important;
