--- a/ftBase.html
+++ b/ftBase.html
@@ -19,7 +19,7 @@
 
     <style>
         .carousel-item {
-            height: calc(100vh - 150px);
+            height: 100%;
         }
         .nav-item.active a.nav-link {
             color: #28a745 !important;
@@ -112,11 +112,11 @@
                                 <ul style="list-style: none; padding-left: 0;">
                                     <li style="display: flex; align-items: center; margin-bottom: 10px;">
                                       <span style="width: 10px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
-                                      <h3 class="h2">Reglamentos de tiro 20-A</h3>
+                                      <h3 class="h2">Reglamento de tiro 20-A</h3>
                                     </li>
                                     <li style="display: flex; align-items: center; margin-bottom: 10px;">
                                       <span style="width: 10px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
-                                      <h3 class="h2">Reglamentos de tiro 20-B</h3>
+                                      <h3 class="h2">Reglamento de tiro 20-B</h3>
                                     </li>
                                   </ul>
                             </div>
@@ -136,7 +136,7 @@
                                 <ul style="list-style: none; padding-left: 0;">
                                     <li style="display: flex; align-items: center; margin-bottom: 10px;">
                                         <span style="width: 17px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
-                                        <h3 class="h2">Szeliski, R. (2010). Vision por computadora: Algoritmos y Aplicaciones</h3>
+                                        <h3 class="h2">Szeliski, R. (2010). Visión por computadora: Algoritmos y Aplicaciones</h3>
                                     </li>
                                     <li style="display: flex; align-items: center; margin-bottom: 10px;">
                                         <span style="width: 12px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
@@ -144,11 +144,11 @@
                                     </li>  
                                     <li style="display: flex; align-items: center; margin-bottom: 10px;">
                                       <span style="width: 10px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
-                                      <h3 class="h2">Reglamentos de tiro 20-A</h3>
+                                      <h3 class="h2">Reglamento de tiro 20-A</h3>
                                     </li>
                                     <li style="display: flex; align-items: center; margin-bottom: 10px;">
                                       <span style="width: 10px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
-                                      <h3 class="h2">Reglamentos de tiro 20-B</h3>
+                                      <h3 class="h2">Reglamento de tiro 20-B</h3>
                                     </li>
                                   </ul>
                             </div>
@@ -172,7 +172,7 @@
                                     </li>
                                     <li style="display: flex; align-items: center; margin-bottom: 10px;">
                                         <span style="width: 17px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
-                                        <h3 class="h2">Szeliski, R. (2010). Vision por computadora: Algoritmos y Aplicaciones. Springer
+                                        <h3 class="h2">Szeliski, R. (2010). Visión por computadora: Algoritmos y Aplicaciones. Springer
                                         </h3>
                                     </li>  
                                     <li style="display: flex; align-items: center; margin-bottom: 10px;">
@@ -208,7 +208,7 @@
                                 <ul style="list-style: none; padding-left: 0;">
                                     <li style="display: flex; align-items: center; margin-bottom: 10px;">
                                         <span style="width: 17px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
-                                        <h3 class="h2">Szeliski, R. (2010). Vision por computadora: Algoritmos y Aplicaciones</h3>
+                                        <h3 class="h2">Szeliski, R. (2010). Visión por computadora: Algoritmos y Aplicaciones</h3>
                                     </li>
                                     <li style="display: flex; align-items: center; margin-bottom: 10px;">
                                       <span style="width: 35px; height: 10px; background-color: black; border-radius: 50%; margin-right: 10px;"></span>
