--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="assets/css/fontawesome.min.css">
     <style>
         .carousel-item {
-            height: calc(100vh - 150px);
+            height: 100%;
         }
         .nav-item.active a.nav-link {
             color: #28a745 !important;
@@ -71,20 +71,21 @@
                         <li class="nav-item">
                             <a class="nav-link" href="acciones.html">Acciones</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="shop.html">F.T. Base</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">F.T. Auxiliar</a>
+                            <a class="nav-link" href="ftBase.html">F.T. Base</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Normativa</a>
+                            <a class="nav-link" href="ftAux.html">F.T. Auxiliar</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Software de apoyo</a>
+                            <a class="nav-link" href="normativa.html">Normativa</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Trabajo de Grado</a>
+                            <a class="nav-link" href="softApoyo.html">Software de apoyo</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="trabajoGrado.html">Trabajo de Grado</a>
                         </li>
                     </ul>
                 </div>
