--- a/normativa.html
+++ b/normativa.html
@@ -19,7 +19,7 @@
 
     <style>
         .carousel-item {
-            height: calc(100vh - 150px);
+            height: 100%;
         }
         .nav-item.active a.nav-link {
             color: #28a745 !important;
