--- a/index.html
+++ b/index.html
@@ -20,13 +20,19 @@
         .carousel-item {
             height: 100%;
         }
+        body {
+            height: 100vh;  
+            width: 100%;
+            margin: 0;
+            padding: 0;
+        }
         .nav-item.active a.nav-link {
             color: #28a745 !important;
         }
     </style>
 </head>
 
-<body>
+<body class="body">
     <!-- Start Top Nav -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-light d-none d-lg-block" id="templatemo_nav_top">
         <div class="container text-light">
@@ -86,6 +92,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="trabajoGrado.html">Trabajo de Grado</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://drive.google.com/file/d/18ZNNVebM-NekSzCwX1NtdtLQxwBRzRJ8/view?usp=drive_link" target="_blank">Matriz</a>
                         </li>
                     </ul>
                 </div>
